Adds redbubble link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
-    
+    <title>Physical Therapy, Tech, Design, & More</title>
 
 
     <!--Google Analytics-->
@@ -26,7 +26,7 @@
 		<h2>Photography</h2>
 			<p>Photography is a passion of mine and a side hustle....what a millennial I am...<a href="https://oceanparkimages.com" target="_blank">oceanparkimages.com</a> and <a href="https://instagram.com/oceanparkinsta" target="_blank">@oceanparkinsta</a></p>		
 		<h2>Squad Styles</h2>
-			<p>I make some shirts and stuff <a href="https://squadstyles.com" target="_blank">squadstyles.com</a> and <a href="https://instagram.com/squadstyles1" target="_blank">@squadstyles1</a></p>
+			<p>I make some shirts and stuff <a href="https://squadstyles.com" target="_blank">squadstyles.com</a> and at Redbubble <a href="https://www.redbubble.com/people/squadstyles?asc=u" target="_blank"> <a href="https://instagram.com/squadstyles1" target="_blank">@squadstyles1</a></p>
 		<h2>Design</h2>
 			<p>I design more stuff too!  <a href="https://www.behance.net/katiebaumez" target="_blank">behance.net/kt995</a></p>
 		<h2>Coding</h2>
