--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
     <title>Physical Therapy, Tech, Design, & More</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
 
 
     <!--Google Analytics-->
@@ -14,9 +15,10 @@
   ga('create', 'UA-86675301-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+	</script>
 
 </head>
+<body>
 
 <div>
 	<h1>Katie Baumez</h1>
@@ -33,4 +35,6 @@
 			<p>While I might not be an expert, my coding skills are always improving:  <a href="https://codepen.io/kt995/#" target="_blank">codepen.io/kt995</a></p>
 		<h2>More About Me</h2>
 			<p>I am a native Floridian, currently located in Miami.  So of course I love the beach and Disney and Florida things.  I was the Director of Marketing for a chain of salons for several years, until I made the transition into the tech field and healthcare field.  Currently I am working on DPT school, improving my tech skills, and working on my businesses.  To make money while all of this is going on, I am a personal trainer.</p>
-			<p>Also I'm always accepting new friends!  So please feel free to contact me anywhere listed here!</p>
+			<p>Also I'm always accepting new friends!  So please feel free to contact me anywhere listed here or at my <a href="https://www.linkedin.com/in/kbaumez/" target="_blank">LinkedIn</a></p>
+</div>
+</body>
