Adds section on boom squad

--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
       </div>
   </div>
 
+
+
+  <div class="kbprojects d-flex container">
+    <div class="project-1 d-flex flex-column flex-md-row">
+        <img class="kbimg" src="images/Screen Shot 2020-05-31 at 5.12.49 PM.png">
+        <div class="project description flex-column">
+          <a href="https://boom-squad.com/" target="_blank"><h1>Boom Squad</h1></a>
+          <p class="project_subtitle">I love to create designs representing all the things people are fans of.   I just love the idea that you are creating art that will strike a chord on their heart strings.  Please check out my work and feel free to submit a request for anything you love!</p>
+          <div class="icons">
+            <a href="https://www.instagram.com/boooomsquad/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://squadstyles.redbubble.com" target="_blank"><i class="fas fa-shopping-bag fa-2x"></i></a>
+
+          </div>
+        </div>
+    </div>
+</div>
+
     <!-- <div class="manatee-div"> 
     
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 432 432" enable-background="new 0 0 432 432"><defs><filter id="a" filterUnits="userSpaceOnUse" x="141.42" y="87.81" width="144.37" height="188.09"><feFlood result="back" flood-color="#fff" flood-opacity="1"/><feBlend in="SourceGraphic" in2="back"/></filter></defs><mask maskUnits="userSpaceOnUse" x="141.42" y="87.81" width="144.37" height="188.09" id="b"><g filter="url(#a)">
