--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a href="https://www.oceanparkimages.com/" target="_blank"><i class="fas fa-camera fa-1x" id="camera-icon"></i></a>
           <!-- <i class="fas fa-code fa-2x"></i> -->
           <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
-          <a href="https://codepen.io/dashboard/" target="_blank"><i class="fab fa-codepen fa-1x"></i></a>
+          <a href="https://codepen.io/kt995" target="_blank"><i class="fab fa-codepen fa-1x"></i></a>
           <a href="https://www.behance.net/katiebaumez" target="_blank"><i class="fab fa-behance fa-1x"></i></a>
           <a href="mailto:katiebaumezwebsites@gmail.com"><i class="fas fa-envelope fa-1x"></i></a>
       </div>
@@ -86,11 +86,25 @@
       <h1 class="display-4">Welcome!</h1>
       <p class="lead">Thank you for visiting me here.</p>
       <hr class="my-4">
-      <p class="jumbotronp">I am a Physical Therapy student graduating in August 2020.  My other passions are design and code.  I would love to meet you, so please message me through any of my social media.</p>
+      <p class="jumbotronp">I am a licensed Physical Therapist in the state of Florida.  My other passions are design and code.  My goals are to provide design and development for businesses large and small to help them succeed.  I would love to meet you, so please message me through any of my social media, or email me here <a href="mailto:katiebaumezwebsites@gmail.com"><i class="fas fa-envelope fa-1x"></i></a></p>
       <a class="btn btn-lg" href="#projects" role="button">Learn more</a>
     </div>
 
 
+    <div id="projects" class="kbprojects d-flex container mt-80 pb-9">
+      <div class="project-1 d-flex flex-column flex-md-row mt-8">
+          <img class="kbimg" src="images/Screen Shot 2020-12-19 at 9.39.34 PM.png">
+          <div class="project description flex-column">
+            <a href="https://www.ptparty.co/" target="_blank"><h1>PT Party</h1></a>
+            <p class="project_subtitle">I hand-coded this website using HTML, CSS, JavaScript.  I used the most up-to-date Bootstrap techniques for the layout.  I managed version control through Github and am hosting the site with Github pages.  I desiged with a simple, clean look in mind to emphasize my work, and provide an interface that is easy on the eyes.</p>
+            <div class="icons">
+              <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+              <a href="mailto:katiebaumezwebsites@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
+
+            </div>
+          </div>
+      </div>
+    </div>
 
 
     <div id="projects" class="kbprojects d-flex container mt-80 pb-9">
