--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <link rel="stylesheet" href="styles.css" type="text/css">
 
   <script src="https://kit.fontawesome.com/5d0c97064c.js" crossorigin="anonymous"></script>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86675301-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-86675301-1');
+  </script>
+
   <!-- <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-XXXXXXXX-Y']);
