changes name from pt party to katiebaumez.com

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="project-1 d-flex flex-column flex-md-row mt-8">
           <img class="kbimg" src="images/Screen Shot 2020-12-19 at 9.39.34 PM.png">
           <div class="project description flex-column">
-            <a href="https://www.ptparty.co/" target="_blank"><h1>PT Party</h1></a>
+            <a href="https://www.ptparty.co/" target="_blank"><h1>katiebaumez.com</h1></a>
             <p class="project_subtitle">I hand-coded this website using HTML, CSS, JavaScript.  I used the most up-to-date Bootstrap techniques for the layout.  I managed version control through Github and am hosting the site with Github pages.  I desiged with a simple, clean look in mind to emphasize my work, and provide an interface that is easy on the eyes.</p>
             <div class="icons">
               <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
