Updates index.html - add section kathrynbaumez.com

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h1 class="display-4">Welcome!</h1>
       <p class="lead">Thank you for visiting me here.</p>
       <hr class="my-4">
-      <p class="jumbotronp">I am a licensed Physical Therapist in the state of Florida.  My other passions are design and code.  My goals are to provide design and development for businesses large and small to help them succeed.  I would love to meet you, so please message me through any of my social media, or email me here <a href="mailto:katiebaumezwebsites@gmail.com"><i class="fas fa-envelope fa-1x"></i></a></p>
+      <p class="jumbotronp">I am a licensed Physical Therapist in the state of Florida.  My other passions are design and code.  My goals are to provide design and development for businesses large and small to help them succeed.  I would love to meet you, so please message me through any of my social media, or email me <a href="mailto:katiebaumezwebsites@gmail.com">here <i class="fas fa-envelope fa-1x"></i></a></p>
       <a class="btn btn-lg" href="#projects" role="button">Learn more</a>
     </div>
 
@@ -117,6 +117,20 @@
       </div>
     </div>
 
+    <div id="projects" class="kbprojects d-flex container mt-80 pb-9">
+      <div class="project-1 d-flex flex-column flex-md-row mt-8">
+          <img class="kbimg" src="images/Screen Shot 2020-12-31 at 7.48.36 PM.png">
+          <div class="project description flex-column">
+            <a href="http://kathrynbaumez.com" target="_blank"><h1>kathrynbaumez.com</h1></a>
+            <p class="project_subtitle">I created this site as a way to specifically feature the PT aspects of my career.  While I admit healthcare and technology are somewhat of an odd couple, these are the two things I love.  I used Wordpress and Elementor, demonstrating my ability to work with common and quite powerful drag and drop builders.  This site took me less than a few days to get up and running, and I look forward to adding more and more content.</p>
+            <div class="icons">
+              <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+              <a href="mailto:kathrynbaumezdpt@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
+
+            </div>
+          </div>
+      </div>
+    </div>
 
     <div id="projects" class="kbprojects d-flex container mt-80 pb-9">
         <div class="project-1 d-flex flex-column flex-md-row mt-8">
