--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             </li>
           </ul>
 
-        <div class="icon">   
+        <div class="icon d-flex justify-content-end">   
           <a href="https://www.oceanparkimages.com/" target="_blank"><i class="fas fa-camera fa-1x" id="camera-icon"></i></a>
           <!-- <i class="fas fa-code fa-2x"></i> -->
           <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
@@ -92,7 +92,7 @@
               <h1 class="mt-4">Nice to meet you</h1>
               <p class="project_subtitle">Thank you so so so much for visiting me here.  I made this site with love, so I hope you find it lovable.  </p>
               <p class="project_subtitle">I hope this site gives you some insight into who I am and the type of work I love to do.  I basically operate in two realms: healthcare and tech.  </p>
-              <p class="project_subtitle" >Within healthcare I am a personal trainer, and soon-to-be Doctor of Physical Therapy (graduating August 2020!)</p>
+              <p class="project_subtitle" >Within healthcare I am Doctor of Physical Therapy and licensed physical therapist.</p>
               <p class="project_subtitle">Within tech, I work with HTML, CSS, JavaScript, Wordpress, Adobe Creative Suite.</p> 
               <p class="project_subtitle">I worked as the Director of Marketing for a chain of salons for several years before transitioning into healthcare.  During that time, I worked with SEO, Google Analytics, Google Ads, Facebook Ads, and basically all types of PR.</p>
               <p class="project_subtitle">At this point I may not know everything, but I am the type of person who will work through a problem, research solutions, and stay determined until I figure it out.</p>
@@ -104,7 +104,7 @@
     
 
 
-  <footer class="footer mt-auto py-3">
+  <footer class="footer py-3">
     <div class="container">
       
       <p><span><i class="far fa-copyright"></i></span> Copyright Katie Baumez 2020</p>
