--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles.css" type="text/css">
 
   <script src="https://kit.fontawesome.com/5d0c97064c.js" crossorigin="anonymous"></script>
   
@@ -96,12 +96,7 @@
     <!-- </div> -->
 
 
-<!-- What can I do for you
-I can animate your SVGs to delight your audience
-check I can create content that accentuates your brand 
-I can provide front-end development to excite your users 
-I can create UI/UX to have your users enjoy your product
-I can train and educate your customers to have them embrace your product  
+ 
 
 
 -->
