adds sections, fonts
adds training and project management sections to index, adds google fonts to head of about

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Katie Baumez
     </title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -247,6 +244,17 @@
       <a class="btn btn-lg" href="#projects" role="button">Learn more</a>
     </div> -->
 
+
+    <!--Buttons-->
+    <!-- <div class="buttondiv mt-80 d-flex justify-content-center align-items-center">
+      <div class="buttondiv2 ">
+        <button class="belowheaderbuttons">Experience</button>
+        <button class="belowheaderbuttons">Contact</button>
+      </div>
+    </div> -->
+
+
+
     <h2 class="ican">I can code sites to excite your users</h2>
     <div  class="kbprojects d-flex container mb-80 pb-9">
       <!-- makes it flex for bootstrap, flex-column puts them in a column, 
@@ -310,7 +318,7 @@
         <iframe id="scaled-frame" class="kbimg" src="https://www.oceanparkimages.com">
         </iframe>
           <div class="project-description flex-column">
-            <a href="https://www.oceanparkimages.com/" target="_blank"><h1>Ocean Park Images</h1></a>
+            <a href="https://www.oceanparkimages.com/" target="_blank"><h4>Ocean Park Images</h4></a>
             <p class="project_subtitle">I'm a part-time professional, part-time hobbyist photographer.  I love photography because it's a way for moments to become immortal, without using any Horcruxes.</p>
             <div class="icons">
               <a href="https://www.instagram.com/oceanparkinsta/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
@@ -328,7 +336,7 @@
       <iframe id="scaled-frame" class="kbimg" src="https://www.boom-squad.com" width="1000">
       </iframe>
         <div class="project-description flex-column">
-          <a href="https://boom-squad.com/" target="_blank"><h1>Boom Squad</h1></a>
+          <a href="https://boom-squad.com/" target="_blank"><h4>Boom Squad</h4></a>
           <p class="project_subtitle">I love to create designs representing all the things people are fans of.   I just love the idea that you are creating art that will strike a chord on their heart strings.  Please check out my work and feel free to submit a request for anything you love!</p>
           <div class="icons">
             <a href="https://www.instagram.com/boooomsquad/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
@@ -344,21 +352,34 @@
     <div class="project-1 d-flex flex-column flex-md-row mt-8 iframe-column">
         <img class="screenshotimg kbimg" src="images/Screen Shot 2020-06-03 at 10.36.53 AM.png">
         <div class="project description flex-column">
-          <a href="https://www.browarc.com/" target="_blank"><h1>Brow Arc</h1></a>
-          <p class="project_subtitle">This is the website I created for a chain of salons.  The jumbotron background is a video.  I created this site with Squarespace, since other people needed to be able to maintain and update it.  I worked on optimizing this site for SEO, specifically SEO for brick-and-mortar locations.</p>
+          <a href="https://www.browarc.com/" target="_blank"><h4>Brow Arc</h4></a>
+          <p class="project_subtitle">As the director of marketing for a chain of salons, I spearheaded our online presence, including all social media, ad spend, analytics, and this website.  The jumbotron background is a video that I produced with a talented team out of LA.  I created this site with Squarespace, since other people needed to be able to maintain and update it.  I worked on optimizing this site for SEO, specifically SEO for brick-and-mortar locations.</p>
         </div>
     </div>
   </div>
 
-  <!-- <h2 class="ican">I can train and educate your customers and employees to have them embrace your product </h2> -->
-  <!-- <div class="project-1 d-flex flex-column flex-md-row mt-8 iframe-column">
-    <img class="screenshotimg kbimg"  src="images/Screen Shot 2020-06-03 at 10.36.53 AM.png">
+  <h2 class="ican">I can train and educate your customers and employees to have them embrace your product </h2> 
+  <div class="kbprojects d-flex container">
+    <div class="project-1 d-flex flex-column flex-md-row mt-8 iframe-column">
+    <img class="screenshotimg kbimg"  src="images/GP__2015_01_19_16_00_14_55041.jpg">
     <div class="project description flex-column">
-      <a href="https://www.browarc.com/" target="_blank"><h1>Brow Arc</h1></a>
+      <a href="https://www.browarc.com/" target="_blank"><h4>Brow Arc</h4></a>
       <p class="project_subtitle">While working for the chain of salons, I trained our entire employee pool on our new POS system, taking them step-by-step through all the processes and guiding through troubleshooting.  I left each employee with the confidence and skill to efficiently operate our system.</p>
     </div>
   </div>
-</div> -->
+</div>
+
+
+<h2 class="ican">I can manage projects to make your life easier.</h2> 
+  <div class="kbprojects d-flex container">
+    <div class="project-1 d-flex flex-column flex-md-row mt-8 iframe-column">
+    <img class="screenshotimg kbimg"  src="images/GP__2015_01_19_16_00_14_55049.jpg">
+    <div class="project description flex-column">
+      <a href="https://www.browarc.com/" target="_blank"><h4>Brow Arc</h4></a>
+      <p class="project_subtitle">As director of operations, I organized openings of 10+ salons, with 6-figure budgets and beautiful finishes.  This involved collaborating with many different parties, ensuring timely completion of project deadlines.  I enjoy fulfilling meaningful projects in efficient and low-stress ways.</p>
+    </div>
+  </div>
+</div>
   
 
     <!-- <div class="manatee-div"> 
