updates codepen link on about.html

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
           <a href="https://www.oceanparkimages.com/" target="_blank"><i class="fas fa-camera fa-1x" id="camera-icon"></i></a>
           <!-- <i class="fas fa-code fa-2x"></i> -->
           <a href="https://www.linkedin.com/in/kbaumez/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
-          <a href="https://codepen.io/dashboard/" target="_blank"><i class="fab fa-codepen fa-1x"></i></a>
+          <a href="https://codepen.io/kt995/" target="_blank"><i class="fab fa-codepen fa-1x"></i></a>
           <a href="https://www.behance.net/katiebaumez" target="_blank"><i class="fab fa-behance fa-1x"></i></a>
           <a href="mailto:katiebaumezwebsites@gmail.com"><i class="fas fa-envelope fa-1x"></i></a>
       </div>
