update frontend dev with sweet museum section

--- a/front-end-development.html
+++ b/front-end-development.html
@@ -112,11 +112,16 @@
 
 
         <div class="projectdiv">
-            <a href="/colorGameKatie.html"><h1 class="projectheading">The Color Guessing Game</h1></a>
+            <a href="/colorGameKatie.html"><h2 class="projectheading">The Color Guessing Game</h2></a>
             <p class="projectdescription">This is a project I completed with Colt Steele in his incredible course "The Web Developer Bootcamp".</p>
             <p class="projectdescription">In this project I learned a ton of JavaScript logic.  I refactored some of the logic my own way, and I implemented slightly different styling and transitions.  Such a fun project.</p>
         </div>
 
+        <div class="projectdiv">
+          <a href="/thesweetmuseum/thesweetmuseum.html"><h2 class="projectheading">The Sweet Museum</h2></a>
+          <p class="projectdescription">This is another project from "The Web Developer Bootcamp".</p>
+          <p class="projectdescription">This project was to demonstrate many of the new functions of the Bootstrap update, including Flexbox.  I modified the look of the project to make it more my own.</p>
+      </div>
 
 
 
